Alembic (camera - also mesh) import scale issue #65717

Closed
opened 2019-06-11 13:44:31 +02:00 by Elias Kremer · 7 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.70

Blender Version
Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: b3f96da2e6
Worked: (optional)

Short description of error
When importing an abc camera with scaling set to 0.01, the camera displays on the not-scaled position.

Exact steps for others to reproduce the error

  • Import alembic with camera.
  • Set scaling to 0.01 in the import settings.

here an alembic for testing: bhu_shot_0030_0340_anim_camera_pbl.abc

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 411.70 **Blender Version** Broken: version: 2.80 (sub 72), branch: blender2.7, commit date: 2019-05-23 20:37, hash: `b3f96da2e6` Worked: (optional) **Short description of error** When importing an abc camera with scaling set to 0.01, the camera displays on the not-scaled position. **Exact steps for others to reproduce the error** - Import alembic with camera. - Set scaling to 0.01 in the import settings. here an alembic for testing: [bhu_shot_0030_0340_anim_camera_pbl.abc](https://archive.blender.org/developer/F7098531/bhu_shot_0030_0340_anim_camera_pbl.abc)
Author

Added subscriber: @EliasKremer

Added subscriber: @EliasKremer
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Sybren A. Stüvel was assigned by Philipp Oeser 2019-06-11 14:40:58 +02:00
Member

Confirmed,

Looks like the (camera) origin is actually correctly scaling with the setting, drawing the camera however fails [stays in original position].
For meshes, this is similar: the selection outline will not scale with the setting the actual polysoup will...
Guess this is CoW-related?
(also getting assert BLI_assert failed: /blender/source/blender/blenkernel/intern/cachefile.c:103, BKE_cachefile_reader_free(), at 'cache_file->id.tag & LIB_TAG_COPIED_ON_WRITE' exiting blender after importing...)

@dr.sybren: do you want to have a look first? [this might also be for someone else if it is burried in the drawing pipeline...]

Confirmed, Looks like the (camera) origin is actually correctly scaling with the setting, drawing the camera however fails [stays in original position]. For meshes, this is similar: the selection outline will not scale with the setting the actual polysoup will... Guess this is CoW-related? (also getting assert BLI_assert failed: `/blender/source/blender/blenkernel/intern/cachefile.c:103, BKE_cachefile_reader_free(), at 'cache_file->id.tag & LIB_TAG_COPIED_ON_WRITE'` exiting blender after importing...) @dr.sybren: do you want to have a look first? [this might also be for someone else if it is burried in the drawing pipeline...]
Philipp Oeser changed title from Alembic camera import scale issue to Alembic (camera - also mesh) import scale issue 2019-06-11 14:41:36 +02:00

This issue was referenced by 0dece50667

This issue was referenced by 0dece50667f1c8bc4d2a1fb73f3d4eaa287922df

Fixed in D5290, will likely be part of 2.81.

Fixed in [D5290](https://archive.blender.org/developer/D5290), will likely be part of 2.81.

@lichtwerk I can't see that BLI_assert failure here, maybe it's been fixed already.

@lichtwerk I can't see that BLI_assert failure here, maybe it's been fixed already.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65717
No description provided.